--- a/src/app/pages/home-page/home-page.html
+++ b/src/app/pages/home-page/home-page.html
@@ -1,2 +1,14 @@
 <h1>Home Page</h1>
 <p>home-page works!</p>
+
+
+<h3>Tradicional {{traditionalProperty}}</h3>
+<h3>Signal {{signalProperty()}}</h3>
+
+<button (click)="onClickTraditional()">
+  Cambiar Tradicional
+</button>
+
+<button (click)="onClickSignal()">
+  Cambiar Señal
+</button>
